--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rusty_cache"
 version = "0.1.0"
-authors = ["Vijay Soni <vs4vijay@example.com>"]
+authors = ["Vijay Soni <vs4vijay@gmail.com>"]
 edition = "2018"
 
 [dependencies]
