--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2018"
 serde = "1.0"
 serde_json = "1.0"
 clap = { version = "3.0", features = ["derive"] }
+actions-rs/toolchain = "1.0"
+actions-rs/cargo = "1.0"
 
 [lib]
 name = "rusty_cache"
